# Line-Agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  OPENCLAW_OLLAMA_SETUP.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/adb/: __init__.py  client.py  devices.py  emulator.py  human_jitter.py  input.py  line_app.py  text_input.py  uiautomator.py
app/ai/: __init__.py  codex_compose.py  context_bundle.py  decision.py  draft_linter.py  embedding_service.py  emotion_classifier.py  llm_client.py  send_safety.py  voice_profile_v2.py
app/core/: __init__.py  audit.py  audit_redact.py  calibrations.py  (+7 more)
configs/: devices.yaml  risk_control.yaml
docs/: AI_SKILLS.md
scripts/: _remediation_004_audit_sent.py  _remediation_004_invalidate_reviews.py  _remediation_004_recompute_derived.py  acceptance_status.py  action_queue.py  adb_probe.py  add_scheduled_post.py  approve_review.py  audit_tail.py  backup_state.py  calibration_status.py  cancel_scheduled_post.py  check_line_app.py  cold_spell_check.py  community_status.py  current_app.py  dashboard.py  dashboard_status.py  dev_webhook_server.py  device_status.py  draft_reply_preview.py  dry_run_compose.py  dump_ui_xml.py  edit_review.py  ensure_device_ready.py  event_health_report.py  export_audit_redacted.py  ignore_review.py  install_apk.py  install_line_app.py  lark_auth_check.py  lark_send_status_card.py  lark_verify_sample.py  line_apk_status.py  lint_draft.py  list_packages.py  list_pending_reviews.py  list_scheduled_posts.py  milestone_status.py  navigate_to_openchat.py  (+34 more)
tests/: __init__.py
(+211 files in other folders)
